sample/msvc/error/c2081.cpp
// C2081.c
void func( int i, j ) {}  // C2081, no type specified for j
